--- a/packages/donor/package.json
+++ b/packages/donor/package.json
@@ -12,7 +12,8 @@
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "react-div-100vh": "^0.5.6",
-    "react-scripts": "^4.0.2"
+    "react-scripts": "^4.0.2",
+    "vest": "^3.1.2"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
